fix: up bouncy castle version
Closes: XRDDEV-2597